<resources>
    <string name="app_name">Where refuel</string>
    <string name="search_hint">Search for the city here</string>
    <string name="action_speak">action_speak</string>
    <string name="action_current_location">action_current_location</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="about">About</string>
    <string name="sort_by">Sort by</string>
    <string name="theme">Theme</string>
    <string name="settings">Settings</string>
    <string name="gas_station">Gas station</string>
    <string name="search_radius">Search radius:</string>
    <string name="filter">Filter</string>
    <string name="price">Price</string>
    <string name="type_of_fuel">Type of fuel</string>
    <string name="favouriteGasStation">Company</string>
    <string name="action_add">Add new station</string>
    <string name="distance">Distance</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="force_daily_map">Force daily map</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="favourites_gas_station">Favourites station</string>
    <string name="title_start_with">Start with</string>
    <string name="action_sort">Sort</string>
    <string name="search">Search</string>
    <string name="current_location">Current Location</string>
    <string name="app_logo">App logo</string>
    <string name="open_source">Open source licenses</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="show_all_licenses">Show all licenses</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="version">Version</string>
    <string name="location_permission_title">To work app need to know your location</string>
    <string name="grant_permission">Grant permission</string>
    <string name="try_permission">Permission denied, please try again</string>
    <string name="feature_not_available">This feature is not yet available</string>
    <string name="last_update">Last update</string>
    <string name="address">Address</string>
    <string name="edit_gas_station">Edit gas station</string>
    <string name="gas_station_name">Station name</string>
    <string name="save">Save</string>
    <string name="current_location_when_start">Search nearby gas station when started</string>
    <string name="all">ALL</string>
    <string name="select_company">Select company</string>
    <string name="delete">Delete</string>
    <string name="gas_station_dont_exist">Don\'t exist</string>
    <string name="share">Share</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="navigate">Navigate to gas station</string>
    <string name="show_on_map">Show on map</string>
    <string name="remove_to_favourites">Remove from favourites</string>
    <string name="report_gas_station">Report gas station</string>
    <string name="open_google_maps_to_navigate">Opening Google Maps to navigate to this gas station</string>
    <string name="home">Home</string>
    <string name="update_fuel_price">Update fuel price</string>
    <string name="oops">Oops</string>
    <string name="empty_favourites">It looks like you have not added any fuel stations to your favorites yet</string>
    <string name="go_add_to_favourites">Let\'s add</string>
    <string name="enter_valid_fuel_price">Enter valid feul price e.g 5.33</string>
    <string name="report">Report</string>
    <string name="report_hint">Report missing, change station location</string>
    <string name="enter_valid_message">Enter valid message</string>
    <string name="add_gas_station_name_hint">e.g BP gas station</string>
    <string name="gas_station_company">gas_station_company</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="add_gas_station_company_hint">gas_station_company_hint</string>
    <string name="city">City</string>
    <string name="add_gas_station_address_hint">e.g Batorego Street 45a</string>
    <string name="add_gas_station_city_hint">e.g Wrocław</string>
    <string name="choose_or_enter_your_own">choose or enter your own</string>
    <string name="add">Add</string>
    <string name="enter_valid">Enter valid</string>
    <string name="no_data">No data</string>
    <string name="average">Average</string>
    <string name="error_find_location">We can\'t find you</string>
    <string name="information_find_location">We find you</string>
    <string name="retry">retry</string>
    <string name="error_download_problem">We can\'t download</string>
    <string name="check_internet_connections">Check internet connections</string>
    <string name="click_to">Click to</string>
    <string name="click_again_to_exit">Click again to exit</string>
    <string name="we_find">We find</string>
    <string name="add_only_information">Add only when you are on gas station</string>
    <string name="success_add_station">Successfully added new station</string>
    <string name="error_add_station">The new station could not be added</string>
    <string name="remove_from_favourites">Remove from favourite</string>
    <string name="success_report_station">Successfully report station</string>
    <string name="error_report_station">Failed to report the station</string>
    <string name="success_update_fuel_price">We updated prices</string>
    <string name="error_update_fuel_price">Prices could not be updated</string>
    <string name="fuel">Fuel</string>
    <string name="gas_station_grammar">gas station</string>
    <string name="enter_at_least_one_change">Enter at least one change</string>
    <string name="update">Update</string>
    <string name="no_change_fuel">If the price has not changed,\n leave the place empty</string>
    <string name="request_running">Please wait, we are still looking for previous stations</string>
    <string name="searching_for_stations">Searching for gas stations..</string>
    <string name="change_settings">Change settings</string>
    <string name="only_network_location_options">Turn on GPS to improve gas station search accuracy</string>
    <string name="tip">Tip</string>
    <string name="no_location_options">Your location settings prevent the application from working properly</string>
    <string name="gps_do_not_remind">Don\'t remind</string>
    <string name="location_changes">You have changed your location significantly.</string>
    <string name="search_again">Search again</string>
    <string name="copy_to_clipbord">Copy to clipboard</string>
    <string name="within_radius_of">within a radius of</string>
    <string name="sorted_by">sorted by</string>
    <string name="gas_stations">Gas stations</string>
    <string name="in">in</string>
    <string name="loading">Loading..</string>

</resources>
