<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_speak"
        android:orderInCategory="100"
        android:title="@string/action_speak"
        android:icon="@drawable/ic_mic"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_current_location"
        android:orderInCategory="100"
        android:title="@string/action_current_location"
        android:icon="@drawable/ic_current_location"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort"
        android:orderInCategory="100"
        android:title="@string/action_sort"
        android:icon="@drawable/ic_sort"
        app:showAsAction="ifRoom" />

</menu>
